Archive2/e4/b4b2747b583958/output
main.cpp:11:10: error: no member named 'transform' in namespace 'std'
    std::transform(myMap.begin(), myMap.end(), std::back_inserter(vec), [](std::pair<int, std::string>& entry) { return entry.second; });
    ~~~~~^
1 error generated.
